--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -8,7 +8,10 @@ version="3.1" metadata-complete="true">
 <param-value>classpath:spring-mybatis.xml</param-value>
 </context-param>
 <listener>
-<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+	<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+</listener>
+<listener>
+	<listener-class>com.htzhny.session.SessionListener</listener-class>  
 </listener>
 
 <!-- 配置SpringMVC环境 -->
